--- a/Projecto/css/adminPanel.css
+++ b/Projecto/css/adminPanel.css
@@ -143,7 +143,7 @@ body {
 }
 
 .panel-content button {
-    background-color: #bb0000; 
+    background-color: #07b32f; 
     color: white;
     padding: 10px 20px;
     border: none;
